set the projet to a library

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "neofox/slamp-web",
     "description": "slamp-web backend",
     "license": "MIT",
-    "type": "project",
+    "type": "library",
     "authors": [
         {
             "name": "Jerome Schaeffer",
